--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="collapse navbar-collapse justify-content-end px-5" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" href="#home">Home</a>
-            <a class="nav-link" href="menu/index.html">Menu</a>
-            <a class="nav-link" href="location/index.html">Location</a>
+            <a class="nav-link" href="/menu/index.html">Menu</a>
+            <a class="nav-link" href="/location/index.html">Location</a>
             <a class="nav-link" href="#footer">Contact Us</a>
           </div>
         </div>
